syntax = "proto3";

package scanner;

service ExecutorService {
	rpc Init (InitRequest) returns (InitReply);
	rpc Start (StartRequest) returns (StartReply);
}

message InitRequest {
	string DbName = 1;
	string Mode = 2;
}

message InitReply {
	bool Success = 1;
	string Error = 2;
}

message StartRequest {
	string Mode = 1;
}

message StartReply {
	bool Success = 1;
}

service OrchestratorService {
	rpc Status (StatusRequest) returns (StatusReply);
	rpc Start (OrchestratorStartRequest) returns (OrchestratorStartReply);
}

message StatusRequest {
	string Message = 1;
}

message StatusReply {
	bool Success = 1;
}

message OrchestratorStartRequest {
	string Mode = 1;
}

message OrchestratorStartReply {
	bool Success = 1;
}
